--- a/style.css
+++ b/style.css
@@ -5,13 +5,14 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+
+
 body {
     background-color: #FFFFF0 !important;
 }
 
 nav {
     z-index: 1;
-    
 }
 
 a span {
@@ -41,7 +42,7 @@ nav div a {
     align-items: center;
     background-color: #FFFFF0;
     position: relative;
-    padding: 10%;
+    padding: 5% 10%;
     z-index: 0;
     overflow: 0;
 }
@@ -94,5 +95,9 @@ small {
 }
 
 p {
-    font-size: 1.5em;
+    font-size: 1.3em;
+}
+
+#CarouselSect {
+    padding: 5% 10%;
 }
