--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
     position: relative;
 }
 
-nav > div > div > ul > li > .nav-link:hover {
+nav>div>div>ul>li>.nav-link:hover {
     background-color: #e7717d;
     color: white !important;
     border-radius: 5%;
@@ -107,7 +107,7 @@ nav div a {
     margin-top: 20px;
 }
 
-small {
+#IntroductieSect>#IntroductieDiv>#IntroductieTextDiv>small {
     border-bottom: 1px solid #e7717d;
 }
 
@@ -149,13 +149,148 @@ p {
 }
 
 footer {
+    padding: 5% 0%;
     background-color: rgb(42, 42, 42);
     color: white;
 }
 
-footer > div {
+footer>div {
     flex-direction: column;
     padding: 0% 10%;
+}
+
+
+#log-in-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100vh;
+    overflow-y: hidden;
+}
+
+.log-in {
+    display: flex;
+    align-items: center;
+    width: 50%;
+    position: relative;
+}
+
+.log-in > div > h1 {
+    color: #0087ca;
+}
+
+.log-in > div > h1 > span {
+    color: #e7717d;
+}
+
+.log-in:nth-child(2) {
+    flex-direction: column;
+}
+
+.log-in:nth-child(2)>div {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.log-in:nth-child(2)>div>div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 5%;
+    width: 100%;
+}
+
+.log-in:nth-child(2)>nav {
+    width: 100%;
+    display: flex;
+    justify-content: left;
+    flex-direction: row;
+}
+
+.log-in:nth-child(1) {
+    border-right: solid;
+}
+
+.log-in:nth-child(1) > div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 50%;
+
+}
+
+.log-in:nth-child(1)>img {
+    width: 100%;
+    height: auto;
+    position: absolute;
+    left: -200px;
+    bottom: 0;
+}
+
+.input-box {
+    margin-top: 20px;
+    position: relative;
+    width: 100%;
+}
+
+input {
+    border-radius: 5px;
+    padding: 2%;
+    width: 100%;
+}
+
+.input-box>i {
+    position: absolute;
+    right: 5%;
+    top: 20%;
+}
+
+form {
+    width: 100%;
+}
+
+form > button {
+    margin-top: 20px;
+    border-radius: 5px;
+    padding: 1%;
+    color: white;
+    background-color: #e7717d;
+}
+
+.remember-me {
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+    white-space: nowrap;
+}
+
+.remember-me input[type="checkbox"] {
+    width: 6%;
+}
+
+#line1 {
+    border: 10px solid #e7717d;
+    width: 100%;
+    opacity: 1;
+    margin: 0;
+}
+
+#line2 {
+    border: 10px solid #0087ca;
+    width: 100%;
+    opacity: 1;
+    margin: 0;
+}
+
+#line3 {
+    border: 10px solid black;
+    width: 100%;
+    opacity: 1;
+    margin: 0;
 }
 
 @media (min-width: 992px) {
@@ -193,7 +328,7 @@ footer > div {
 
     #IntroductieSect>img {
         position: absolute;
-        left: -26%;
+        left: -32%;
         top: 25%;
         z-index: 3;
         width: 50%;
@@ -224,9 +359,17 @@ footer > div {
         padding: 5% 0%;
     }
 
-    footer > div {
+    footer>div {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+    }
+
+    #log-in-section {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        height: 100vh;
+        overflow-y: hidden;
     }
 }
