--- a/style.css
+++ b/style.css
@@ -185,10 +185,11 @@ footer>div {
 
 .log-in:nth-child(2) {
     flex-direction: column;
+    width: 100%;
 }
 
 .log-in:nth-child(2)>div {
-    width: 50%;
+    width: 80%;
     height: 100%;
     display: flex;
     align-items: center;
@@ -211,13 +212,15 @@ footer>div {
 }
 
 .log-in:nth-child(1) {
-    border-right: solid;
+    width: 100%;
+    height: 20%;
+    border-right: none;
 }
 
 .log-in:nth-child(1) > div {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: end;
     width: 100%;
     height: 50%;
 
@@ -372,4 +375,25 @@ form > button {
         height: 100vh;
         overflow-y: hidden;
     }
+
+    .log-in:nth-child(1) {
+        width: 50%;
+        height: 100%;
+        border-right: solid;
+        align-items: end;
+    }
+
+    .log-in:nth-child(1)>img {
+        width: 100%;
+        height: auto;
+        position: absolute;
+        left: -200px;
+        bottom: 200px;
+    }
+
+    .log-in:nth-child(2) {
+        flex-direction: column;
+        width: 50%;
+    }
+    
 }
