--- a/style.css
+++ b/style.css
@@ -319,6 +319,7 @@ form > button {
 
 #KlasButtons {
     width: 100%;
+    height: 300px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -352,6 +353,7 @@ form > button {
 
 #SelectCarContent {
     width: 100%;
+    padding-top: 8%;
 }
 
 .tier {
@@ -408,8 +410,8 @@ input:nth-child(3) {
     position: absolute;
     display: flex;
     flex-direction: column;
-    width: 60%;
-    height: 70%;
+    width: 70%;
+    height: 90%;
     justify-content: space-around;
 }
 
@@ -524,6 +526,7 @@ input:nth-child(3) {
         display: flex;
         justify-content: space-between;
         width: 100%;
+        padding-top: 0;
     }
 
     #SelectCarContent > img {
@@ -541,6 +544,7 @@ input:nth-child(3) {
     
     #KlasButtons {
         width: 30%;
+        height: 400px;
     }
 
     .klas:hover {
@@ -587,5 +591,10 @@ input:nth-child(3) {
 
     .verzenden {
         padding: 1%;
+    }
+
+    #OptiesDiv {
+        width: 60%;
+        height: 72%;
     }
 }
