--- a/style.css
+++ b/style.css
@@ -359,7 +359,22 @@ form > button {
 .tier {
     font-size: larger;
     font-weight: bold;
-    color: #ffd700;
+}
+
+#ButtonS > .tier {
+    color: #b9f2ff;
+}
+
+#ButtonA > .tier {
+    color: gold;
+}
+
+#ButtonB > .tier {
+    color: silver;
+}
+
+#ButtonC > .tier {
+    color: #ffd2a5;
 }
 
 #ContactInfo{
@@ -425,6 +440,70 @@ input:nth-child(3) {
     padding: 2%;
     width: 32%;
 }
+
+#AutoSection {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.TierDiv {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.AutoDiv {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.Auto {
+    display: flex;
+    flex-direction: column;
+    text-align: start;
+    width: 100%;
+    padding: 2%;
+}
+
+.TierDiv:nth-child(1) > .AutoDiv > .Auto {
+    border: solid #b9f2ff;
+}
+
+.TierDiv:nth-child(2) > .AutoDiv > .Auto {
+    border: solid gold;
+}
+
+.TierDiv:nth-child(3) > .AutoDiv > .Auto {
+    border: solid silver;
+}
+
+.TierDiv:nth-child(4) > .AutoDiv > .Auto {
+    border: solid #CD7F32;
+}
+
+
+
+.Auto > button {
+    width: 30%;
+    border: none;
+    background-color: #e7717d;
+    color: white;
+    border-radius: 3px;
+    padding: 1% 3%;
+}
+
+.AutoDiv .Auto > img {
+    width: 100%;
+    height: 70%;
+    object-fit: cover;
+    object-position: center;
+}
+
+
 
 @media (min-width: 992px) {
     #IntroductieSect {
@@ -601,5 +680,13 @@ input:nth-child(3) {
     #OptiesDiv {
         width: 60%;
         height: 72%;
+    }
+
+    .AutoDiv {
+        flex-direction: row;
+    }
+
+    .Auto {
+        width: 30%;
     }
 }
